# pyamp-example

./: SETUP.md  i2samp.py  pyproject.toml  simple_test.py  test.py  working_tts.py
src/pyamp_example/: __init__.py  main.py  test.py
