[project]
name = "pyamp-example"
version = "0.1.0"
description = "Small example that shows how to use the MAX98357A DAC"
readme = "README.md"
authors = [
    { name = "Frey Clante", email = "fclante@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
pyamp-example = "pyamp_example:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
