[project]
name = "pyamp-example"
version = "0.1.0"
description = "Small example that shows how to use the MAX98357A DAC"
readme = "README.md"
authors = [
    { name = "Frey Clante", email = "fclante@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "adafruit-platformdetect>=3.83.1",
    "adafruit-python-shell>=1.10.0",
    "args>=0.1.0",
    "clint>=0.5.1",
    "gtts>=2.5.4",
    "pyttsx3>=2.99",
]

[project.scripts]
pyamp-example = "pyamp_example:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
